k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gestao-escolar
  labels:
    name: api-escolar
