k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-escolar
  namespace: gestao-escolar
  labels:
    app: api-escolar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-escolar
  template:
    metadata:
      labels:
        app: api-escolar
    spec:
      containers:
      - name: api-escolar
        image: us-central1-docker.pkg.dev/quantum-backup-467623-t3/api-escolar-repo/api-escolar:main-680378a
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: database-storage
          mountPath: /app/db
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
        livenessProbe:
          httpGet:
            path: /docs
            port: 8000
          initialDelaySeconds: 60
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /docs
            port: 8000
          initialDelaySeconds: 60
          periodSeconds: 30
      volumes:
      - name: database-storage
        persistentVolumeClaim:
          claimName: api-escolar-pvc
