k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-escolar-service
  namespace: gestao-escolar
  labels:
    app: api-escolar
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: api-escolar
